# dbx-dev-setup

./: .gitignore  README.md  pyproject.toml
data/: customers.csv  transactions.csv
dbx_dev_setup/: README.md  databricks.yml  setup.py
dbx_dev_setup/resources/: dbx_dev_setup.job.yml  dbx_dev_setup.pipeline.yml
dbx_dev_setup/src/: dlt_pipeline.ipynb  notebook.ipynb
dbx_dev_setup/tests/: main_test.py
src/: aggregate_transactions.py  clean_customers.py  test.py
tests/: test_aggregate_transactions.py  test_clean_customers.py  test_simple_math.py
